--- a/IOL9/IOL9cn.tex
+++ b/IOL9/IOL9cn.tex
@@ -1,5 +1,4 @@
-\documentclass[11pt]{article}
-\usepackage{a4wide}
+\documentclass[letterpaper,11pt]{article}
 \usepackage{fontspec}
 \usepackage{xeCJK}
 
@@ -12,7 +11,7 @@
 
 % "‘" & "’" might be recognized as CJK characters.
 % Numbers are changed to make the date nature.
-\normalspacedchars{‘’“”1234567890-—/}
+\normalspacedchars{‘’“”1234567890-—–/̄́`ˇ}
 
 \input{dxIOL9CN}
 % Run RemoveSpace to get IOL9.nospace.tex
