--- a/IOL10/IOL10.nospace.tex
+++ b/IOL10/IOL10.nospace.tex
@@ -20,7 +20,7 @@
 \newcommand \ipaword [1]{[\ipa{#1}]}
 
 % IPA Input
-% XeLaTeX has built-in Unicode support, which means IPA input becomes a simple font selection problems.
+% XeLaTeX has built-in Unicode support, which means IPA input becomes a simple font selection problem.
 \newfontfamily \IPAFont{CMUSerif-Roman}
 \newcommand \ipa [1]{\bgroup\IPAFont #1\egroup}
 \newcommand \bipa [1]{\bgroup\bfseries\IPAFont #1\egroup}
