--- a/IOL10/IOL10cn.tex
+++ b/IOL10/IOL10cn.tex
@@ -9,10 +9,11 @@
 % Chinese Font Selection
 
 \setmainfont[BoldFont = CMUSerif-Bold]{CMUSerif-Roman}
+\setsansfont{CMUSansSerif}
 
 % "‘" & "’" might be recognized as CJK characters.
 % Numbers are changed to make the date nature.
-\normalspacedchars{‘’“”1234567890-—/}
+\normalspacedchars{‘’“”1234567890-—/̈}
 
 \input{dxIOL10CN}
 % Run RemoveSpace to get IOL10.nospace.tex
