--- a/IOL8/dxIOL8CN.tex
+++ b/IOL8/dxIOL8CN.tex
@@ -74,7 +74,7 @@
 \def \feminine{阴性}
 \def \donVnext #1{其中 #1 取决于下一音节之元音}
 \def \ifendsin #1{若词干以#1结尾}
-\def \wherRdef #1#2#3{若#2包含于词根中, 则#1为该流音; 否则, #1是#3}
+\def \wherRdef #1#2#3{若#2包含于词根中, 则#1为该辅音; 否则, #1是#3}
 \def \unRfollo #1{除非#1恰附于其后}
 \def \with #1{中#1}
 \def \before #1{在#1前}
@@ -93,7 +93,7 @@
 \def \plurelse #1#2{你可能认为这2个词在#1中说法相同, 但实际上它们分别是 #2}
 \def \howexpla{如何解释}
 \def \tranboth{分别翻译成这2种方言}
-\def \bothdial{(2种方言相同)}
+\def \bothdial{2种方言相同}
 \def \brokrule #1#2{在#1中, (与#2不同) 第1条规则对复数形式并不适用}
 \def \hypfirst{换言之, 当一个辅音位于词干中, 而另一个辅音位于后缀中时}
 \def \hyptwond{或当元音在后缀添加前已经被选定时}
