--- a/IOL9/IOL9.tex
+++ b/IOL9/IOL9.tex
@@ -543,7 +543,7 @@
 \unlinali\ (\bodypart, \kinsterm);
 \thenposs.
 \item \alienpos {\bipa{á}}.
-\item \incompoN\ \lastonlo\ (\textbf{\latehta\`}).
+\item \incompoN\ \lastonlo\ (\textbf{\BMark}).
 \end{enumerate}
 
 \begin{assgts}
@@ -667,7 +667,7 @@ X & AAABBB & ------ & ------ & ------ \\\hline
 
 \sentowas 9{\bord{syād indravajrā yadi tau jagau ga\d{h}}}.
 \canrecon {\bord a}{\bord{syād}}, \nonrecon {\bord a}{\bord{indravajrā}} (\orcompar {10}).
-\fortpoet.\latehta{\=}
+\fortpoet.
 
 \longmark {\textbf{\LMark}, \camacron,};
 %(\bord{ā}, \bord{ī}, \bord{ū}); \nomacurt.
