--- a/IOL9/IOL9.nospace.tex
+++ b/IOL9/IOL9.nospace.tex
@@ -357,13 +357,10 @@
 \problem \inbarcod {EAN-13 (\au\ GTIN-13)}, \anospeak.
 \subcodes {10}, \nocodnil {UPC(A)}.
 
-
-
 \mbox{}
 \barheight=40pt\EAN X-000000-000000%
 \hfill \raise20pt\hbox{$\longrightarrow$}\hfill \GridEAN 1{111321132113211112311231123111113211321132113211321132111110}
 \\
-
 \nobarcod: \unsubcod {EAN-13}.
 \zagrad{\gridrite}
 
@@ -371,7 +368,6 @@
 \barheight=40pt\EAN 5-000168-08555-5%
 \hfill \raise20pt\hbox{$\longrightarrow$}\hfill \GridEAN 1{111321111231123222111143121111113211121312311231123112311110}
 \\
-
 \sibarcod: \issubcod 5.
 %
 \UKbarcod {50}. \rebarcod {5-000168}{08555}. \lastxsum.
@@ -551,7 +547,7 @@
 \unlinali\ (\bodypart, \kinsterm);
 \thenposs.
 \item \alienpos {\bipa{á}}.
-\item \incompoN\lastonlo\ (\textbf{\latehta\`}).
+\item \incompoN\lastonlo\ (\textbf{\BMark}).
 \end{enumerate}
 
 \begin{assgts}
@@ -675,7 +671,7 @@ X & AAABBB & ------ & ------ & ------ \\\hline
 
 \sentowas 9{\bord{syād indravajrā yadi tau jagau ga\d{h}}}.
 \canrecon {\bord a}{\bord{syād}}, \nonrecon {\bord a}{\bord{indravajrā}} (\orcompar {10}).
-\fortpoet.\latehta{\=}
+\fortpoet.
 
 \longmark {\textbf{\LMark}, \camacron,};
 %(\bord{ā}, \bord{ī}, \bord{ū}); \nomacurt.
